# keywatch

./: CMakeLists.txt  DESIGN.md  LICENCE  README.md
src/: CMakeLists.txt  keys.cc  keys.cxx  keys.h  keys.hxx  main.cc  parser.cc  parser.cxx  parser.h  parser.hxx
src/daemon/: config.cc  config.h  status.cc  status.h  worker.cc  worker.h
src/hkp/: hkp.cc  hkp.h  parser.cc  parser.h
src/keys/: keys.cc  keys.h
